Fix player names visibility, correct treseta rules, improve Croatian grammar

--- a/src/Game2v2.css
+++ b/src/Game2v2.css
@@ -447,6 +447,7 @@
   min-width: 120px;
   position: relative;
   z-index: 10;
+  color: #4a5568;
 }
 
 .player-info.teammate {
@@ -496,6 +497,7 @@
 
 .team-players {
   margin-top: 16px;
+  color: #4a5568;
 }
 
 .player-stat {
@@ -890,6 +892,7 @@
 
   .player-name {
     font-size: 12px;
+    color: white;
   }
 
   .player-cards-indicator {
@@ -933,6 +936,7 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    color: white;
   }
 
   .player-cards-indicator {
